# shop

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LAUNCH_0.1_PLAN.md  LICENSE  Makefile  README.md  REVIEWS_PIPELINE.md  SCALING.md  SEARCH_API.md  depot.json  go.mod  main.go
app/: .dockerignore  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
client/: client.go
cmd/: backfill.go  health.go  index.go  index_test.go  indexer_test.go  meta.go  recommend.go  review_samples.go  root.go  scan.go  search.go  search_reviews.go  search_test.go  status.go  upsert.go  util.go
common/: conftest.py  pyproject.toml
common/hev_shop_common/: __init__.py  catalog.py  config.py  embedders.py  records.py  schema.py  trending.py
common/tests/: test_config.py  test_records.py  test_trending.py
docs/: BROWSING_RAIL_DESIGN.md  FEATURE_EXPLAINERS.md  FRONTEND_0.1_DESIGN.md  LAYER_GATEWAY_SHOWCASE.md  MIGRATION-result-count-to-scans.md  TRENDING_DESIGN.md  dashboard-team-note-2026-05-18.md  layer-team-image-blob-cache-2026-05-19.md  layer-team-pipeline-pause-2026-05-18.md  mesh-team-followup-2026-05-15.md  mesh-team-message-2026-05-15.md  mesh-team-note-2026-05-15.md
indexer/: Dockerfile  Dockerfile.udf  app.py  blob_backfill.py  conftest.py  dataset.py  embed.py  extract_chunk.py  huggingface_source.py  openapi.json  requirements-udf.txt  requirements.txt  trending.py  warm_blobs.py
kubernetes/: README.md  api-deployment.yaml  api-service.yaml  configmap.yaml  cpu-worker-deployment.yaml  cpu-worker-scaledobject.yaml  (+14 more)
(+165 files in other folders)
